Fixed alignment of statuses on report page

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@
 .path-mod-attendance .cell {
     position: relative;
 }
-.takelist input[type="radio"],
+.path-mod-attendance .takelist input[type="radio"],
 .path-mod-attendance [class^="attendancestatus"] {
     position: absolute;
     left: 0;
@@ -165,7 +165,7 @@
     margin: 0;
     z-index: 1;
 }
-.takelist input[type="radio"] {
+.path-mod-attendance .takelist input[type="radio"] {
     z-index: 2;
     top: 50%;
     margin-top: -7px;
@@ -175,11 +175,15 @@
     height: 14px;
 }
 
-.takelist input[type="radio"] ~ label {
+.path-mod-attendance .takelist input[type="radio"] ~ label {
     opacity: .1;
 }
-.takelist input[type="radio"]:checked ~ label {
+.path-mod-attendance .takelist input[type="radio"]:checked ~ label {
     opacity: 1;
+}
+
+.path-mod-attendance .statuses {
+    text-align: right;
 }
 
 .path-mod-attendance .attendancestatus-P {
